--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ html{
     
     .header .nav-links {
         padding-left: 2px;
-        color: white;
+        color: black;
         text-decoration: underline;
         display: flex;
         flex-direction: column;
@@ -337,6 +337,9 @@ html{
     }
       
     .header .nav-links li {
+        border-radius: 5px;
+        background-color: white;
+        margin-bottom: 10px;
         display: inline-block;
         padding: 0 20px;
         padding-bottom: 2px;
@@ -348,7 +351,7 @@ html{
       
     .header .nav-links a {
         font-size: 700;
-        color: #eceff1;
+        color: black;
         text-decoration: none;
         transition: all 0.3s ease 0s;
     }
