--- a/style2.css
+++ b/style2.css
@@ -123,7 +123,7 @@ body{
     
     .header .nav-links {
         padding-left: 2px;
-        color: white;
+        color: black;
         text-decoration: underline;
         display: flex;
         flex-direction: column;
@@ -131,6 +131,9 @@ body{
     }
       
     .header .nav-links li {
+        border-radius: 5px;
+        background-color: white;
+        margin-bottom: 10px;
         display: inline-block;
         padding: 0 20px;
         padding-bottom: 2px;
@@ -142,7 +145,7 @@ body{
       
     .header .nav-links a {
         font-size: 700;
-        color: #eceff1;
+        color: black;
         text-decoration: none;
         transition: all 0.3s ease 0s;
     }
